fixed some of the alignment issues and reduced some of the spacing. It's a little more visually acceptable now. Might be good enough to keep at least for now.

--- a/src/pages/splash.css
+++ b/src/pages/splash.css
@@ -108,16 +108,51 @@ h2 {
   opacity: 1;
 }
 
+
 /*
-     * name
-     * */
+ * fishkeeper
+ */
+
+.verticalContainer-fishkpr {
+  grid-area: 1 / 8 / 4 / 9;
+  display: grid;
+  grid-template-rows: 1fr auto 1fr;
+  pointer-events: none;
+}
+
+.fishkpr-before {
+  grid-area: 1 / 1 / 2 / 2;
+  text-align: right;
+}
+
+.fishkpr-after {
+  grid-area: 3 / 1 / 4 / 2;
+}
+
+.fishkpr-h {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+.verticalContainer-fishkpr > .fishkpr {
+  pointer-events: auto;
+  -webkit-transition: 0.5s;
+  transition: 0.2s;
+  cursor: default;
+}
+
+.verticalContainer-fishkpr:hover > .fishkpr {
+  -webkit-transition: 0.5s;
+  transition: 0.3s;
+  opacity: 1;
+}
+
+
+/*
+* name
+*/
 
 .ryan-y {
   grid-area: 2 / 3 / 3 / 4;
-}
-
-.ryan-a0 {
-  grid-area: 1 / 4 / 2 / 5;
 }
 
 .ryan-n {
@@ -126,10 +161,6 @@ h2 {
 
 .ryan-t {
   grid-area: 2 / 7 / 3 / 8;
-}
-
-.ryan-h {
-  grid-area: 2 / 8 / 3 / 9;
 }
 
 .ryan-o {
